--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -27,7 +27,7 @@
         android:layout_height="0dp"
         app:layout_constraintHeight_percent="0.04"
         android:background="@drawable/raffit_3"
-        app:layout_constraintVertical_bias="0.39"
+        app:layout_constraintVertical_bias="0.43"
         app:layout_constraintHorizontal_bias="1.2"
         app:layout_constraintStart_toStartOf ="@+id/tv_home_title"
         app:layout_constraintTop_toTopOf="@+id/tv_home_title"
@@ -50,6 +50,7 @@
         app:layout_constraintEnd_toEndOf="@+id/tv_home_title" />
 
     <androidx.appcompat.widget.SearchView
+        android:id="@+id/search_view_home"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
@@ -59,7 +60,8 @@
         app:layout_constraintStart_toStartOf ="@+id/tv_home_title"
         app:layout_constraintTop_toTopOf="@+id/tv_home_title"
         app:layout_constraintBottom_toBottomOf="@+id/tv_home_title"
-        app:layout_constraintEnd_toEndOf="@+id/tv_home_title"/>
+        app:layout_constraintEnd_toEndOf="@+id/tv_home_title"
+        android:transitionName="trans"/>
 
     <ImageView
         android:layout_width="wrap_content"
