--- a/app/src/main/res/layout/item_img.xml
+++ b/app/src/main/res/layout/item_img.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     android:padding="8dp">
 
 
@@ -38,11 +39,11 @@
         android:layout_height="24dp"
         android:layout_margin="4dp"
         android:src="@drawable/baseline_image_24"
-        android:clipToOutline="true"
         android:scaleType="centerCrop"
-        android:elevation="4dp"
-        app:layout_constraintStart_toStartOf="@id/const1"
-        app:layout_constraintTop_toTopOf="@id/const1"/>
+        app:tint="@color/enable"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/const1"
+        app:layout_constraintBottom_toTopOf="@+id/tv_date"/>
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_bookmark"
@@ -50,13 +51,13 @@
         android:layout_height="24dp"
         android:layout_margin="4dp"
         android:src="@drawable/ic_logo_tokki"
-        app:layout_constraintEnd_toEndOf="@id/const1"
+        app:layout_constraintStart_toStartOf="@id/const1"
         app:layout_constraintTop_toTopOf="@id/const1" />
 
 
     <TextView
         android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:elegantTextHeight="true"
@@ -66,24 +67,30 @@
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/const1"
+        app:layout_constraintEnd_toStartOf="@+id/iv_type"
         app:layout_constraintTop_toBottomOf="@+id/const1" />
 
     <TextView
         android:id="@+id/tv_site"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="naver"
         android:textSize="12sp"
+        android:maxLines="2"
+        android:ellipsize="end"
         app:layout_constraintStart_toStartOf="@+id/tv_title"
+        app:layout_constraintEnd_toStartOf="@+id/tv_date"
         app:layout_constraintTop_toBottomOf="@+id/tv_title" />
 
     <TextView
         android:id="@+id/tv_date"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:text="24.01.24 13:22:24"
-        android:textSize="10sp"
+        android:textSize="12sp"
+        android:singleLine="false"
+        android:maxLines="2"
         app:layout_constraintEnd_toEndOf="@id/const1"
         app:layout_constraintTop_toBottomOf="@+id/tv_title" />
 
