--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,13 +3,13 @@
 
     <item
         android:id="@+id/nav_search_img"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/img_item_search_24"
         android:title="@string/nav_search_img" />
 
 
     <item
         android:id="@+id/nav_my_box"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/ic_mybox"
         android:title="@string/nav_my_box" />
 
 </menu>
