--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="background">#FF732D</color>
     <color name="icon">#3c1e1e</color>
+    <color name="enable">#c8c8c8</color>
+    <color name="enable_btn">#EFEFEF</color>
+    <color name="enable_icon">#808080</color>
 </resources>
