--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,6 +8,7 @@
         <!-- Secondary brand color. -->
         <!--<item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>-->
+        <item name="android:statusBarColor">@color/background</item>
         <item name="colorOnSecondary">@color/icon</item>
         <!-- Status bar color. -->
        <!-- <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
